# cpp3sem

./: .gitignore
lab01/: CMakeLists.txt  main.cpp
test_prep/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp  G.cpp  H.cpp
week01/: .gitignore
week01/cmake/: CMakeLists.txt  main.cpp
week01/cmake/foo/: CMakeLists.txt  foo.cpp  foo.h
week01/hdr/: Makefile  foo.cpp
week01/mkf/: Makefile
week01/preproctest/: main.cpp  main_pre.cpp  notes
week01/task1/: CMakeLists.txt  task.md
week01/task2/: task.md
week01/task2/ASCII-Tetris/: CMakeLists.txt  tetris.c
week01/task3/: CMakeLists.txt  main.cpp  task.md
week01/task3/include/: ans_handler.h  my_math.h
week01/task3/src/: ans_handler.cpp  my_math.cpp
week02/example/: CMakeLists.txt  main.cpp
week02/raytracer/: CMakeLists.txt  main.cpp
week02/raytracer/fun/: compiler.py  video_render.py
week02/raytracer/include/: color.h  object.h  params.h  ray.h  scene.h  transformations.h  utils.h  vec3.h  viewport.h
week02/raytracer/src/: color.cpp  object.cpp  ray.cpp  scene.cpp  transformations.cpp  utils.cpp  vec3.cpp  viewport.cpp
week02/task1/: CMakeLists.txt  main.cpp
week02/task1/include/: params.h  transformations.h  utils.h  vec3.h
week02/task1/src/: transformations.cpp  utils.cpp  vec3.cpp
week06/: CMakeLists.txt  grid.md  main  main.cpp
week06/array/: main.cpp
week06/pow/: CMakeLists.txt
week_any/: CMakeLists.txt  main.cpp  taskA
